--- a/package.json
+++ b/package.json
@@ -1,31 +1,21 @@
 {
-  "name": "postmanTut",
-  "version": "0.0.1",
+  "name": "luigi-example-openui5",
+  "private": true,
+  "version": "0.2.0",
+  "author": "SAP SE",
+  "description": "Luigi with OpenUI5 Demo App",
   "scripts": {
-    "start": "ui5 serve --config=uimodule/ui5.yaml  --open index.html",
-    "build:ui": "run-s  build:uimodule",
-    "test": "run-s lint karma",
-    "karma-ci": "karma start karma-ci.conf.js",
-    "clearCoverage": "shx rm -rf coverage",
-    "karma": "run-s clearCoverage karma-ci",
-    "lint": "eslint .",
-    "serve:uimodule": "ui5 serve --config=uimodule/ui5.yaml",
-    "build:uimodule": "ui5 build --config=uimodule/ui5.yaml --clean-dest --a --dest uimodule/dist --include-task=generateManifestBundle"
+    "build": "ui5 build --all",
+    "start": "ui5 serve --open index.html",
+    "serve": "ws --compress -d dist"
+  },
+  "dependencies": {
+    "@luigi-project/client": "^1.1.0",
+    "@luigi-project/core": "^1.1.0"
   },
   "devDependencies": {
-    "shx": "^0.3.3",
-    "@ui5/cli": "^2.7.1",
-    "ui5-middleware-livereload": "^0.5.1",
-    "karma": "^5.2.3",
-    "karma-chrome-launcher": "^3.1.0",
-    "karma-coverage": "^2.0.3",
-    "karma-ui5": "^2.3.2",
-    "npm-run-all": "^4.1.5",
-    "eslint": "^7.15.0"
-  },
-  "ui5": {
-    "dependencies": [
-      "ui5-middleware-livereload"
-    ]
+    "@ui5/cli": "^2.3.1",
+    "local-web-server": "^4.2.1",
+    "ui5-middleware-livereload": "^0.5.1"
   }
 }
