--- a/package.json
+++ b/package.json
@@ -1,13 +1,18 @@
 {
-  "name": "luigi-example-openui5",
+  "name": "postman-tutorial",
   "private": true,
   "version": "0.2.0",
   "author": "SAP SE",
   "description": "Luigi with OpenUI5 Demo App",
+  "homepage": "https://uxkjaer.github.io/postmantutorial",
+
+
   "scripts": {
     "build": "ui5 build --all",
     "start": "ui5 serve --open index.html",
-    "serve": "ws --compress -d dist"
+    "serve": "ws --compress -d dist",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@luigi-project/client": "^1.8.1",
@@ -15,6 +20,7 @@
   },
   "devDependencies": {
     "@ui5/cli": "^2.3.1",
+    "gh-pages": "^3.1.0",
     "local-web-server": "^4.2.1",
     "ui5-middleware-livereload": "^0.5.1"
   }
