--- a/package.json
+++ b/package.json
@@ -5,10 +5,8 @@
   "author": "SAP SE",
   "description": "Luigi with OpenUI5 Demo App",
   "homepage": "https://uxkjaer.github.io/postmantutorial",
-
-
   "scripts": {
-    "build": "ui5 build --all",
+    "build": "ui5 build",
     "start": "ui5 serve --open index.html",
     "serve": "ws --compress -d dist",
     "predeploy": "npm run build",
@@ -22,6 +20,15 @@
     "@ui5/cli": "^2.3.1",
     "gh-pages": "^3.1.0",
     "local-web-server": "^4.2.1",
-    "ui5-middleware-livereload": "^0.5.1"
+    "ui5-middleware-livereload": "^0.5.1",
+    "ui5-middleware-servestatic": "^0.3.3",
+    "ui5-middleware-simpleproxy": "^0.7.0"
+  },
+  "ui5": {
+    "dependencies": [
+      "ui5-middleware-simpleproxy",
+      "ui5-middleware-servestatic",
+      "ui5-middleware-livereload"
+    ]
   }
 }
