--- a/ui5.yaml
+++ b/ui5.yaml
@@ -9,7 +9,25 @@ framework:
     - name: sap.m
     - name: sap.ui.core
     - name: themelib_sap_fiori_3
-
+server:
+  customMiddleware:
+  - name: ui5-middleware-servestatic
+    afterMiddleware: compression
+    mountPath: /libs/luigi-core
+    configuration:
+      rootPath: "./node_modules/@luigi-project/core"
+  - name: ui5-middleware-servestatic
+    afterMiddleware: compression
+    mountPath: /libs/luigi-client
+    configuration:
+      rootPath: "./node_modules/@luigi-project/client"
+  - name: ui5-middleware-livereload
+    afterMiddleware: compression
+    configuration:
+      debug: true
+      extraExts: "xml,json,properties"
+      port: 35729
+      path: "webapp"
 ---
 specVersion: "2.1"
 kind: extension
